data/CATCH_ISSUES
Reason: Filesize does not match recorded size
Couldn't download .* Aborting.
Fetch failed for
undefined reference to .yy
This ebuild will need the
This package will need access to .* cds.
These fortunes have offensive content. Enable offensive USE Flag
This plugin requires the X frontend of gkrellm.
/bin/sh: bad interpreter: Permission denied
ACCESS VIOLATION SUMMARY
Can't read
CMake will not be able to correctly generate this project.
class file .* not found
error: redefinition of
has incomplete type
: undefined reference to
undefined symbol:
exited with code: 1.
I can't find the format file
; recompile with -fPIC
Fatal error:
ld: cannot find
multiple definition of
must be installed to use
Non type-variable argument
too few arguments to function
: redefining predefined macro
Error 137
Line indented less than expected
Parse error
object has no attribute
.*.texinfo:.*: unknown command
reference to Parameter is ambiguous
Segmentation fault
Unknown M68KMAKE directive
Could not find Objective-C runtime
USE Flag .* not in IUSE
was not declared in this scope
You need package
ninja: build stopped:
: undefined method
Please specify at least one package name on the command line.
make inconsistent assumptions over
ERROR: you will need
file was not found
Could not find a package configuration file provided by
CMake Error at
Configuring incomplete, errors occurred
Unknown CMake command
include called with wrong number of arguments
Fetched file: .* VERIFY FAILED!
error: package .* does not exist
error: .* was not declared in this scope
error: '::isinf'
error while loading shared libraries:
error:.*failed to fetch
Failed to load interface for
The .* distribution was not found and is required by
error:
stack smashing detected
No rule to make target
final link failed: Nonrepresentable section on output
ld returned 1 exit status
Error: No implementations provided for the following modules:
LoadError
cannot find symbol
incompatible types
bad class file:
Compile failed; see the compiler error
Failed Patch:
can't get .* relocation type
Not in scope:
The Motif libraries are not installed.
No instance for (
setup: At least the following dependencies are missing:
texi2info failed
error in setup command
Could not find Objective-C
Requires at least PyQ.*
You have to install development tools first.
is not a function name
mkdir: cannot create directory
required by '.*', not found
Unable to find program
required internal CMake variable not set
javac: invalid source release
Unknown channel
bad option
Assertion .* failed
Aborted
Failed to find
dereferencing pointer to
Error getting
CMake Error at
cmake failed
ImportError:
Error on line
chown: invalid user
is not on the classpath.
Failed Running automake
error while loading shared libraries
PYTHON needs to be set for
Add .* to DEPEND
Cannot find \$EPATCH_SOURCE!
Failed Running autoconf
mv: cannot stat
No CommonLisp implementation found
Could not link test program to Python
cannot find package
Failed Running aclocal
is banned in EAPI=
make: .*: Command not found
make:.* Stop.
error adding symbols:
missing separator
Make check failed. See above for details.
pdflatex failed
An exception has occurred in the compiler
error in .* command
Can't locate Locale/Messages.pm in @INC
Ebuild author forgot an entry
Please install required programs:
.*command not found
mmap: wanted .* bytes at .*, actually mapped at .*
pushd.*No such file or directory
No package .* found
Invalid use of .*.eclass
Unable to set SELinux security labels
patch .* failed with
you need to fix the relative paths in patch
csc: invalid option
make.*: No such file or directory.  Stop.
Unknown module(s) in QT
LaTeX Error:
Error producing PDF from TeX source
Error .*GCING.* in
Warning as Error:
pdfetex exited with bad status
SyntaxError: invalid syntax
AppArmor parser error for
/usr/bin/install: will not overwrite just-created
gettext infrastructure mismatch
missing binary operator before token
are incompatible when linking
EPYTHON unset
POD document had syntax errors
No supported Python implementation
must be called in src_prepare
One of the following USE flags is needed:
python_pkg_setup() not called
Ambiguous occurrence
Missing USE flags in
Compilation failed in require at
is banned in EAPI
Failed Running libtoolize
Select exactly one database type out of these: mysql oracle postgres sqlite
failed to load "
Type of arg .* to shift must be array
java.lang.NoSuchMethodError:
make .* Error
The source directory .* doesn.t exist
Document .* does not validate
not enough memory for initialization
dblatex or fop must be installed to use
No Python implementation set
install: cannot stat .*: No such file or directory
could not be found, but is required.
The library 'System.Xml.dll' could not be found.
mktextfm:.*failed to make
Failed Running autopoint
tar: This does not look like a tar archive
/bin/sh: .* No such file or directory
requires support for 32-bit executables.
Failed setting classpath from Ant task
Option .* requires an argument
sed: can't read .*: No such file or directory
parser error : .* not defined
make: invalid option
Uncaught error in
/root/cache
^Error:
: Error:
recipe for target .* failed
backend requires .* - aborting
does not exist
\\[ERROR\\]
convert: no
syntax error
record .* undefined
ocamlfind: Package .* not found
E: Failure
terminated with error code
make.* Error
setup.py:.*: UserWarning: .* must be installed to build
no configure script found
Function .* not defined
rake aborted!
extra arguments no longer supported; please file a bug
eant failed
E: Cannot find external tool
pushd: too many arguments
are banned in EAPI
PostgreSQL slot must be set to one of:
gmcs: No such file or directory
eapply: no files specified
python_export called without a python implementation and EPYTHON is unset
Fatal error
Discovering .* failed
Error .
Error:
ERROR :
ERROR:
error
ERROR
